--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,3 @@
-OPENAI_API_KEY = "your-openai-api-key-here"
+COHERE_API_KEY = "YOUR API KEY"  
+# for security concerns I am not putting my API key 
+# use your cohere API key 
