add api key to host my app

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,1 @@
-COHERE_API_KEY = "YOUR API KEY"  
-# for security concerns I am not putting my API key 
-# use your cohere API key 
+COHERE_API_KEY = "al0NitA9ZXEDq3Bg8YEqjsS37Vci7vbHKUkoO6k1" 
