api key removel

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,3 @@
-COHERE_API_KEY = "al0NitA9ZXEDq3Bg8YEqjsS37Vci7vbHKUkoO6k1" 
+COHERE_API_KEY = "your_cohere_key"
+
+for security purpose I don't put my api key
